@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 
-    Copyright (c) 2021, 2023 Contributors to the Eclipse Foundation. All rights reserved.
+    Copyright (c) 2021, 2025 Contributors to the Eclipse Foundation. All rights reserved.
 
     This program and the accompanying materials are made available under the
     terms of the Eclipse Public License v. 2.0, which is available at
@@ -152,60 +152,114 @@
                     <execution>
                         <id>prepare-tck-and-glassfish</id>
                         <phase>pre-integration-test</phase>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
                         <configuration>
                             <target xmlns:if="ant:if" xmlns:unless="ant:unless">
                                 <taskdef resource="net/sf/antcontrib/antcontrib.properties"
-                                         classpathref="maven.plugin.classpath" />
+                                     classpathref="maven.plugin.classpath" />
 
-                               <macrodef name="tck-setting">
-                                    <attribute name="key" /> <attribute name="value" />
+                                <macrodef name="tck-property-update">
+                                    <attribute name="key" />
+                                    <attribute name="value" />
                                     <sequential>
-                                      <replaceregexp file="${tck.home}/bin/ts.jte" byline="true"
-                                        match="@{key}=.*" replace="@{key}=@{value}" />
+                                      <replaceregexp byline="true"
+                                        file="${tck.home}/bin/ts.jte"
+                                        match="@{key}=.*"
+                                        replace="@{key}=@{value}" />
                                     </sequential>
                                 </macrodef>
-
-                                <macrodef name="tck-add">
-                                    <attribute name="key" /> <attribute name="value" />
+                                <macrodef name="tck-property-add">
+                                    <attribute name="key" />
+                                    <attribute name="value" />
                                     <sequential>
                                         <concat append="true" destfile="${tck.home}/bin/ts.jte">@{key}=@{value}${line.separator}</concat>
                                     </sequential>
                                 </macrodef>
+                                <macrodef name="tck-line-update">
+                                    <attribute name="pattern" />
+                                    <attribute name="replacement" />
+                                    <sequential>
+                                      <replaceregexp byline="true"
+                                        file="${tck.home}/bin/ts.jte"
+                                        match="@{pattern}"
+                                        replace="@{replacement}" />
+                                    </sequential>
+                                </macrodef>
+                                <macrodef name="tck-keystore-suffix">
+                                    <attribute name="file" />
+                                    <sequential>
+                                        <replaceregexp flags="g"
+                                          file="@{file}"
+                                          match="/cacerts\.jks"
+                                          replace="/cacerts.p12" />
+                                        <replaceregexp flags="g"
+                                          file="@{file}"
+                                          match="/keystore\.jks"
+                                          replace="/keystore.p12" />
+                                    </sequential>
+                                </macrodef>
 
+                                <property name="jacc.truststore" value="${project.build.directory}/cacerts.p12"/>
+                                <property name="jacc.truststore.password" value="changeit"/>
+                                <property name="s1as.truststore" value="${glassfish.home}/glassfish/domains/domain1/config/cacerts.p12"/>
+                                <property name="s1as.truststore.password" value="changeit"/>
 
-                                <!-- Change configuration -->
-                                <tck-setting key="jaspic.home" value="${glassfish.home}/glassfish"/>
-                                <tck-setting key="harness.log.traceflag" value="true"/>
-                                <tck-setting key="s1as.jvm.options" value="-Dj2eelogin.name=${user}:-Dj2eelogin.password=${password}"/>
+                                <tck-line-update
+                                    pattern="^(\s+)-Djavax.net.ssl.trustStore=\$\{s1as.domain\}/\$\{sjsas.instance.config.dir\}/cacerts.jks"
+                                    replacement="\1-Djavax.net.ssl.trustStore=${jacc.truststore} -Djavax.net.ssl.trustStorePassword=${jacc.truststore.password}" />
+                                <tck-line-update
+                                    pattern="^(\s+)-Djavax.net.ssl.trustStore=\$\{ri.domain\}/\$\{ri.instance.config.dir\}/cacerts.jks"
+                                    replacement="\1-Djavax.net.ssl.trustStore=${jacc.truststore} -Djavax.net.ssl.trustStorePassword=${jacc.truststore.password}" />
+                                <tck-line-update
+                                    pattern="^(.*/)admin-cli.jar(.*)"
+                                    replacement="\1hk2.jar:${jaspic.home}/modules/jakarta.activation-api.jar\2" />
+                                <tck-line-update
+                                    pattern="^(.*\$\{JAVA_HOME\}/bin/java)(.*)"
+                                    replacement="\1 --module-path ${jaspic.home}/lib/bootstrap --add-modules ALL-MODULE-PATH \2" />
+                                <!-- Caused StackOverflow in JDK 11+21 -->
+                                <tck-line-update
+                                    pattern="^.*-Djava.protocol.handler.pkgs=javax.net.ssl.*"
+                                    replacement="\\\\" />
 
-                                <tck-setting key="vendor.authconfig.factory" value="org.glassfish.epicyro.config.factory.file.AuthConfigFileFactory"/>
+                                <tck-property-update key="jaspic.home" value="${glassfish.home}/glassfish"/>
+                                <tck-property-update key="harness.log.traceflag" value="true"/>
+                                <tck-property-update key="s1as.jvm.options" value="-Dj2eelogin.name=${user}:-Dj2eelogin.password=${password}"/>
 
-                                <tck-setting key="webServerHost" value="localhost"/>
-                                <tck-setting key="webServerPort" value="${port.http}"/>
-                                <tck-setting key="securedWebServicePort" value="${port.https}"/>
-                                <tck-setting key="s1as.admin.port" value="${port.admin}"/>
-                                <tck-setting key="glassfish.admin.port" value="${port.admin}"/>
-                                <tck-setting key="orb.port" value="${port.orb}"/>
-                                <tck-setting key="database.port" value="${port.derby}"/>
-                                <tck-setting key="harness.log.port" value="${port.harness.log}"/>
+                                <tck-property-update key="vendor.authconfig.factory" value="org.glassfish.epicyro.config.factory.file.AuthConfigFileFactory"/>
 
-                                <tck-setting key="report.dir" value="${tck.home}/authenticationtckreport/authentication"/>
-                                <tck-setting key="work.dir" value="${tck.home}/authenticationwork/authentication"/>
+                                <tck-property-update key="glassfish.admin.port" value="${port.admin}"/>
+                                <tck-property-update key="s1as.admin.port" value="${port.admin}"/>
+                                <tck-property-update key="database.port" value="${port.derby}"/>
+                                <tck-property-update key="orb.port" value="${port.orb}"/>
+                                <tck-property-update key="webServerHost" value="localhost"/>
+                                <tck-property-update key="webServerPort" value="${port.http}"/>
+                                <tck-property-update key="securedWebServicePort" value="${port.https}"/>
+                                <tck-property-update key="harness.log.port" value="${port.harness.log}"/>
+
+                                <tck-property-update key="report.dir" value="${tck.home}/authenticationtckreport/authentication"/>
+                                <tck-property-update key="work.dir" value="${tck.home}/authenticationwork/authentication"/>
 
                                 <!--
                                     # It's an open question why these settings are not just part of ts.jte to begin with.
                                     # It's also an open question why the Authentication TCK insists on these being defined
                                 -->
+                                <tck-property-add key="persistence.unit.name.2" value="JPATCK2"/>
+                                <tck-property-add key="persistence.unit.name" value="CTS-EM"/>
+                                <tck-property-add key="jakarta.persistence.provider" value="org.eclipse.persistence.jpa.PersistenceProvider"/>
+                                <tck-property-add key="jakarta.persistence.jdbc.driver" value="org.apache.derby.jdbc.ClientDriver"/>
+                                <tck-property-add key="jakarta.persistence.jdbc.url" value="jdbc:derby://localhost:${port.derby}/derbyDB;create=true"/>
+                                <tck-property-add key="jakarta.persistence.jdbc.user" value="cts1"/>
+                                <tck-property-add key="jakarta.persistence.jdbc.password" value="cts1"/>
+                                <tck-property-add key="jpa.provider.implementation.specific.properties" value="eclipselink.logging.level=OFF"/>
+                                <tck-property-add key="persistence.second.level.caching.supported" value="true"/>
 
-                                <tck-add key="persistence.unit.name.2" value="JPATCK2"/>
-                                <tck-add key="persistence.unit.name" value="CTS-EM"/>
-                                <tck-add key="jakarta.persistence.provider" value="org.eclipse.persistence.jpa.PersistenceProvider"/>
-                                <tck-add key="jakarta.persistence.jdbc.driver" value="org.apache.derby.jdbc.ClientDriver"/>
-                                <tck-add key="jakarta.persistence.jdbc.url" value="jdbc:derby://localhost:${port.derby}/derbyDB;create=true"/>
-                                <tck-add key="jakarta.persistence.jdbc.user" value="cts1"/>
-                                <tck-add key="jakarta.persistence.jdbc.password" value="cts1"/>
-                                <tck-add key="jpa.provider.implementation.specific.properties" value="eclipselink.logging.level=OFF"/>
-                                <tck-add key="persistence.second.level.caching.supported" value="true"/>
+                                <tck-property-add key="jacc.truststore" value="${jacc.truststore}" />
+                                <tck-property-add key="s1as.truststore" value="${s1as.truststore}" />
+
+                                <tck-keystore-suffix file="${tck.home}/bin/xml/impl/glassfish/common.xml" />
+                                <tck-keystore-suffix file="${tck.home}/bin/xml/impl/glassfish/s1as.xml" />
 
                                 <limit maxwait="60">
                                     <exec executable="${glassfish.asadmin}" dir="${glassfish.home}/glassfish/bin">
@@ -224,6 +278,18 @@
                                     <exec executable="${glassfish.asadmin}" dir="${glassfish.home}/glassfish/bin" failonerror="true">
                                         <env key="AS_JAVA" value="${java.home}"/>
                                         <arg value="start-domain"/>
+                                    </exec>
+                                    <exec executable="${java.home}/bin/keytool" >
+                                        <env key="JAVA_HOME" value="${java.home}" />
+                                        <arg line=" -importkeystore"/>
+                                        <arg line=" -srcalias s1as"/>
+                                        <arg line=" -destalias s1as"/>
+                                        <arg line=" -srckeystore ${s1as.truststore}"/>
+                                        <arg line=" -noprompt"/>
+                                        <arg line=" -trustcacerts"/>
+                                        <arg line=" -destkeystore ${jacc.truststore}"/>
+                                        <arg line=" -srcstorepass ${s1as.truststore.password}"/>
+                                        <arg line=" -deststorepass ${jacc.truststore.password}"/>
                                     </exec>
 
                                     <if>
@@ -259,9 +325,6 @@
                                 </replace>
                             </target>
                         </configuration>
-                        <goals>
-                            <goal>run</goal>
-                        </goals>
                     </execution>
 
                     <execution>
